<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/authLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginLeft="16dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/hint_email" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:inputType="textPassword"
        android:hint="@string/hint_password" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:weightSum="2">
        <Button
            android:id="@+id/btnRegistrar"
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textColor="@color/white"
            android:text="@string/text_registrar" />
        <Button
            android:id="@+id/btnAcceder"
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textColor="@color/white"
            android:text="@string/text_acceder" />
    </LinearLayout>
</LinearLayout>
